@@ -16,8 +16,10 @@ const defineAlgoOrder = (definition = {}) => {
 
   if (!_isObject(events)) {
     throw new Error('algo definition defines no events')
-  } else if (!_isObject(events.orders)) {
-    throw new Error('algo definition defines no order events')
+  }
+
+  if (!events.orders) {
+    events.orders = {}
   }
 
   if (!events.orders.order_error) { // estlint-disable-line
